--- a/app/globals.css
+++ b/app/globals.css
@@ -19,8 +19,9 @@
 body {
   color: rgb(var(--foreground-rgb));
   background: #fff;
+  @apply font-serif;
 }
 
-/* .post {
-  margin: 2rem;
-} */
+h1, h2, h3, h4, h5, h6 {
+  @apply font-sans;
+}
