--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,30 @@ body {
   @apply font-serif;
 }
 
+a {
+  @apply underline
+}
+
 h1, h2, h3, h4, h5, h6 {
   @apply font-sans;
+}
+
+h2 {
+  @apply font-medium text-[2.5rem];
+}
+
+h3 {
+  @apply font-semibold text-3xl;
+}
+
+h4 {
+  @apply font-bold text-2xl;
+}
+
+h5 {
+  @apply font-bold text-xl uppercase;
+}
+
+h6 {
+  @apply font-extrabold text-lg;
 }
