--- a/app/globals.css
+++ b/app/globals.css
@@ -31,21 +31,21 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2 {
-  @apply font-medium text-[2.5rem];
+  @apply font-medium text-[1.75rem] md:text-[2.5rem];
 }
 
 h3 {
-  @apply font-semibold text-3xl;
+  @apply font-semibold text-2xl md:text-3xl;
 }
 
 h4 {
-  @apply font-bold text-2xl;
+  @apply font-bold text-xl md:text-2xl;
 }
 
 h5 {
-  @apply font-bold text-xl uppercase;
+  @apply font-bold text-lg md:text-xl uppercase;
 }
 
 h6 {
-  @apply font-extrabold text-lg;
+  @apply font-extrabold text-lg md:text-lg;
 }
